# Devil-May-Cry-3-Crimson

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
Research/AdditionalCheatTables/: CStageSetGateHighFPSFix.CT  DamageStructDrive.CT  DamageStructJDC.CT  DamageStructShotgun.CT  DriveThroughWalls.CT  EnemySlotting.CT  FixBloodgoylesStoneFormTime.CT  FixSummonedSwordsInitialTravel.CT  HDC - SessionData and MissionData.CT  menuScrollSpeed.CT  menunav.CT  turnrateFix.CT  yamraveresearch.CT
Research/IDA/: dmc3.exe.i64
Research/Misc/: CreateEffectCalls.txt  SoundEffectCalls.txt
Research/ReClass/: dmc3.rcnet
src/: Actor.cpp  Actor.hpp  BossRush.cpp  BossRush.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Crimson.cpp  CrimsonBetterArkham2.cpp  CrimsonBetterArkham2.hpp  CrimsonConfig.hpp  CrimsonConfigGameplay.cpp  CrimsonConfigGameplay.hpp  CrimsonConfigGameplayMask.hpp  CrimsonDetours.cpp  CrimsonDetours.hpp  CrimsonEfk.cpp  CrimsonEfk.hpp  CrimsonEfkPreload.cpp  CrimsonEfkPreload.hpp  CrimsonFX.cpp  CrimsonFX.hpp  CrimsonFastcallDetours.cpp  CrimsonFastcallDetours.hpp  CrimsonFastcalls.cpp  CrimsonFastcalls.hpp  CrimsonFileHandling.cpp  CrimsonFileHandling.hpp  CrimsonGUI.cpp  CrimsonGUI.hpp  CrimsonGameModes.cpp  CrimsonGameplay.cpp  CrimsonGameplay.hpp  CrimsonHUD.cpp  CrimsonHUD.hpp  CrimsonHighFPSFixes.cpp  CrimsonHighFPSFixes.hpp  CrimsonLicense.hpp  CrimsonOnTick.cpp  CrimsonOnTick.hpp  (+32 more)
src/Core/: Core.hpp  Core_ImGui.cpp  DataTypes.hpp  GUI.cpp  GUI.hpp
src/Global/: GUIBase.cpp  HooksBase.cpp  HooksBase.hpp
src/UI/: EmbeddedImages.hpp
src/masm/: CItemOrbPickupAllPlayers.asm  ChargeMechanicsCPlayer.asm  CheckMissionResultBPScreen.asm  CheckMissionResultScreen.asm  CheckScreenBreak.asm  CheckTotalResultsScreen.asm  ConfirmSetAction.asm  CreateEffect.asm  DrawCollisions.asm  FixBlendingEffects.asm  FixBloodgoyleStormFormTime.asm  FixBossCam.asm  FixCStaffRollCredits.asm  FixCStageSetGateSpawn.asm  FixCStageSetSeal.asm  FixClothPhysics.asm  FixCrashArkhamPt2Grab.asm  FixEnemyAttackCooldowns.asm  FixSecretMissionTimerFPS.asm  FixStaggerGravity.asm  FixSummonedSwordsInitialTravel.asm  InterceptCollisions.asm  JudgementCutDetours.asm  NoAirLunarPhaseLift.asm  PortalsHideAndMute.asm  ShotgunShlSpawnAnglePointBlank.asm  TurnRateFix.asm
